<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SupportIntent</string>
    <string name="title_activity_support">SupportActivity</string>
    <string name="support_details_label">Details</string>
    <string name="support_message_label">Message</string>
    <string name="support_solved_label">Solved?</string>

    <string name="new_support">New Support</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s support</string>

    <string name="username_label_text">User Name</string>
    <string name="username_field_hint">Enter User Name</string>
    <string name="password_label_text">Password</string>
    <string name="password_field_hint">Enter Password</string>
    <string name="login_button_text">Login</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
